<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:gravity="top"
    tools:context="com.example.marek.bmi.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mass_label"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/weightUnitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:text="@string/eu_weight_unit"/>
    </LinearLayout>

    <NumberPicker
        android:id="@+id/massPicker"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_label"
            android:layout_margin="5dp"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/heightUnitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:text="@string/eu_height_unit"/>
    </LinearLayout>

    <NumberPicker
        android:id="@+id/heightPicker"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/computeButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/compute_label"
        android:onClick="showResult"
        android:layout_margin="5dp"/>

    <Switch
        android:id="@+id/localeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/select_locale_label"
        android:onClick="toggleLocale"/>
</LinearLayout>
